# oop_lab07

./: .gitignore  CMakeLists.txt  README.md  factory.h  game.cpp  game.h  gtest_npc.cpp  main.cpp  npc.cpp  npc.h  observer.h  run_tests.cpp  visitor.cpp  visitor.h
